<resources>
    <string name="app_name">OnlyBooks</string>

    <!-- Login Activy -->
    <string name="welcome">Bem-vind@s</string>
    <string name="email_address_text">Email</string>
    <string name="password_text">Senha</string>
    <string name="log_in_text">Entrar</string>
    <string name="dont_have_account_text">Não possui conta?</string>
    <string name="register_here_text">Cadastre aqui!</string>
    <string name="forgot_password_text">Esqueci a senha</string>
    <string name="user_name_text">Usuário</string>
    <string name="register_text">Cadastrar</string>
    <string name="have_account_text">Já possui conta?</string>
    <string name="log_in_here_text">Logue aqui!</string>
    <string name="info_text">Para redefinir sua senha digite o email cadastrado na sua conta e lhe enviaremos o link com as intruções.</string>
    <string name="send_text">Enviar</string>
    <string name="info_bottom">Caso não tenha acesso ao e-mail cadastrado, entre em contato com o nosso Atendimento.</string>
    <string name="btn_selected_upload_imagem">Selecionar Imagem</string>
    <string name="btn_upload_imagem">Enviar Imagem</string>
    <string name="et_name_chapter">Digite aqui o nome do capítulo</string>
    <string name="tv_name_chapter">Nome do Capítulo</string>
    <string name="btn_selected_upload_pdf">Selecionar PDF</string>
    <string name="btn_upload_pdf">Enviar PDF</string>
    <string name="btn_selected_upload_audio">Selecionar áudio</string>
    <string name="btn_upload_audio">Enviar áudio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="read_ebook">Ler ebook</string>
    <string name="text_input_title">Título *</string>
    <string name="text_input_co_author">Co Autor</string>
    <string name="text_input_primary_storyteller">Narrador primário *</string>
    <string name="text_input_secondary_storyteller">Narrador secundário</string>
    <string name="text_input_genre1">Gênero 1 *</string>
    <string name="text_input_genre2">Gênero 2</string>
    <string name="text_input_genre3">Gênero 3</string>
    <string name="text_input_parental_rating">Classificação indicativa *</string>
    <string name="text_input_synopsis">Sinopse *</string>
    <string name="text_button_select_cover">Selecionar capa</string>
    <string name="text_button_publish">Publicar</string>
    <string name="text_info_box_publish">Atenção! \n Você poderá inserir capa e capítulo depois de postar o Ebook</string>
    <string name="text_question_forgot_password">Esqueceu a senha?</string>
    <string name="text_question_no_problem">Sem problemas!</string>
    <string name="text_input_email">Email</string>
    <string name="text_info_box_error">Não existe usuário cadastrado com esse email!</string>
    <string name="text_decription_logo">Logo OnlyBooks</string>
    <string name="text_info_box_no_connection">Poxa, você está sem conexão com a internet :(</string>
    <string name="text_button_try_again">Tentar reconexão</string>
    <string name="text_input_password">Senha</string>
    <string name="text_info_box_error_wrong_user_or_password">Usuário ou senha incorretos</string>
    <string name="text_input_nickname">Apelido</string>
    <string name="text_info_box_error3">Usuário ou email já cadastrado.</string>
    <string name="text_input_title_book">Audiobook/Ebook</string>
    <string name="text_info_progress">Enviando o áudio, aguarde.</string>
    <string name="text_progress_info_pdf">Enviando PDF, aguarde.</string>
    <string name="text_progress_info_pdf_loading">Carregando Ebook...</string>
    <string name="text_info_logoff">Tem certeza que deseja sair?</string>
    <string name="text_option_logoff">Sair</string>
    <string name="text_option_cancel">Cancelar</string>
    <string name="text_button_listen_audiobook">Ouvir AudioBook</string>
    <string name="text_button_select_photo">Selecionar foto</string>
    <string name="text_button_send_photo">Enviar foto</string>
    <string name="text_title_genre1">Drama</string>
    <string name="text_input_synopsis_base">Sinopse do livro</string>
    <string name="text_suggestion_audiobook">Nossa sugestão de AudioBooks para você!</string>
    <string name="text_suggestion_ebook">Nossa sugestão de Ebooks para você!</string>
    <string name="text_weekly_suggestion">Destaque da semana!</string>
    <string name="text_info_weekly_suggetions">De uma chance pro novo, quem \nsabe ele não te conquista né?</string>
    <string name="text_button_weekly_suggetions">Conhecer</string>
    <string name="text_author_audiobook">Autor</string>
    <string name="text_button_make_ebook">Criar Ebook</string>
    <string name="text_button_make_audiobook">Criar Audiobook</string>
    <string name="text_title_readings">Leituras</string>
    <string name="text_title_tapping">Escutas</string>
    <string name="text_switch_button_my_works">Mostrar Minhas Obras?</string>
    <string name="text_title_my_works">Minhas Obras</string>
    <string name="text_button_ebooks">Ebooks</string>
    <string name="text_button_audiobooks">AudioBooks</string>
    <string name="text_my_library">Minha biblioteca</string>
    <string name="text_title_profile_details">Detalhes do perfil</string>
    <string name="text_input_description">Descrição</string>
    <string name="text_button_update_profile">Atualizar perfil</string>
    <string name="text_title_configurations">Configurações</string>
    <string name="text_button_edit_profile">Editar perfil</string>
    <string name="text_button_change_profile_photo">Trocar foto do perfil</string>
    <string name="text_button_logoff">Sair</string>
    <string name="text_name_author">Autor: %s</string>
</resources>