<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/azulClaro"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/welcome"
        android:textColor="@color/azulEscuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_nickname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/text_input_nickname"
        android:textColorHint="@color/azulEscuro"
        app:boxStrokeColor="@color/azulEscuro"
        app:counterTextColor="@color/azulEscuro"
        app:hintTextColor="@color/azulEscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="textEmailAddress"
            android:textColor="@color/azulEscuro"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/text_input_email"
        android:textColorHint="@color/azulEscuro"
        app:boxStrokeColor="@color/azulEscuro"
        app:counterTextColor="@color/azulEscuro"
        app:hintTextColor="@color/azulEscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_nickname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="textEmailAddress"
            android:textColor="@color/azulEscuro"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/text_input_password"
        android:textColorHint="@color/azulEscuro"
        app:boxStrokeColor="@color/azulEscuro"
        app:counterTextColor="@color/azulEscuro"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/azulEscuro"
        app:hintTextColor="@color/azulEscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="textPassword"
            android:textColor="@color/azulEscuro"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_info_box_error3"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:fontFamily="@font/source_sans_pro"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/azulEscuro"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/register_text"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:textColorHint="@color/cinzaClaro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_password" />

    <TextView
        android:id="@+id/not_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/have_account_text"
        android:textColor="@color/azulEscuro"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/log_in_here_text"
        android:textColor="@color/azulEscuro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/register_button"
        app:layout_constraintStart_toEndOf="@id/not_account_text"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>