<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cinzaClaro"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/text_info_logoff"
        android:textColor="@color/azulEscuro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cinzaClaro"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/text_option_logoff"
        android:textAlignment="center"
        android:textColorHint="@color/azulEscuro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_no"
        app:layout_constraintEnd_toStartOf="@id/btn_no"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:rippleColor="@color/azulClaro"
        app:strokeColor="@color/azulEscuro"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/cinzaClaro"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/text_option_cancel"
        android:textAlignment="center"
        android:textColorHint="@color/azulEscuro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/btn_yes"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:rippleColor="@color/azulClaro"
        app:strokeColor="@color/azulEscuro"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>