<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/azulClaro"
    tools:context=".ui.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="Esqueceu a senha?"
        android:textColor="@color/azulEscuro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/no_problems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="Sem problemas!"
        android:textColor="@color/azulEscuro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/info_text"
        android:textAlignment="center"
        android:textColor="@color/azulEscuro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_problems" />


    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_rounded5"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/email_address_text"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/azulEscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text" />

    <TextView
        android:id="@+id/errorRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Não existe usuário cadastrado com esse email!"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/send_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <Button
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/azulEscuro"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/send_text"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:textColorHint="@color/cinzaClaro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <TextView
        android:id="@+id/not_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/have_account_text"
        android:textColor="@color/azulEscuro"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/info_bottom"
        app:layout_constraintEnd_toStartOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/send_email"
        app:layout_constraintTop_toBottomOf="@id/send_email" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/log_in_here_text"
        android:textColor="@color/azulEscuro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/info_bottom"
        app:layout_constraintEnd_toEndOf="@id/send_email"
        app:layout_constraintStart_toEndOf="@id/not_account_text"
        app:layout_constraintTop_toBottomOf="@id/send_email" />

    <TextView
        android:id="@+id/info_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/info_bottom"
        android:textAlignment="center"
        android:textColor="@color/azulEscuro"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>